--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuario de EcoFood</title>
+    <title>Trabajador de EcoFood</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <div class="container">
@@ -37,9 +38,35 @@
                         </div>
                     </div>
                 </nav>
-                
-                
             </div>
+        </div>
+    </div>
+    <div class="container seccion-cards">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <div class="card custom-card">
+              <div class="card-body">
+                <h5 class="card-title">¿Quienes Somos?</h5>
+                <p class="card-text">EcoFood es una organización que busca reducir el desperdicio alimentario y promover la sostenibilidad a través de educación y tecnología.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card custom-card">
+              <div class="card-body">
+                <h5 class="card-title">¿Que hacemos?</h5>
+                <p class="card-text">EcoFood educa, conecta e innova para reducir el desperdicio alimentario mediante talleres, alianzas y tecnología.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card custom-card">
+              <div class="card-body">
+                <h5 class="card-title">¿Por que lo hacemos?</h5>
+                <p class="card-text">Lo hacemos con el fin de reducir el desperdicio de alimentos con herramientas educativas y tecnológicas.
+                    Con todo esto poder tener un mundo con menos desperdicio y mayor seguridad alimentaria.</p>
+            </div>
+          </div>
         </div>
     </div>
 </body>
