Creo que el proyecto esta finalizado

--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -42,32 +42,32 @@
         </div>
     </div>
     <div class="container seccion-cards">
-        <div class="row text-center">
-          <div class="col-md-4">
-            <div class="card custom-card">
-              <div class="card-body">
-                <h5 class="card-title">¿Quienes Somos?</h5>
-                <p class="card-text">EcoFood es una organización que busca reducir el desperdicio alimentario y promover la sostenibilidad a través de educación y tecnología.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card custom-card">
-              <div class="card-body">
-                <h5 class="card-title">¿Que hacemos?</h5>
-                <p class="card-text">EcoFood educa, conecta e innova para reducir el desperdicio alimentario mediante talleres, alianzas y tecnología.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card custom-card">
-              <div class="card-body">
-                <h5 class="card-title">¿Por que lo hacemos?</h5>
-                <p class="card-text">Lo hacemos con el fin de reducir el desperdicio de alimentos con herramientas educativas y tecnológicas.
-                    Con todo esto poder tener un mundo con menos desperdicio y mayor seguridad alimentaria.</p>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <div class="card card-personalizado">
+            <div class="card-body">
+              <h5 class="titulo-card">¿Quienes Somos?</h5>
+              <p class="texto-card">EcoFood es una organización que busca reducir el desperdicio alimentario y promover la sostenibilidad a través de educación y tecnología.</p>
             </div>
           </div>
         </div>
-    </div>
+        <div class="col-md-4">
+          <div class="card card-personalizado">
+            <div class="card-body">
+              <h5 class="titulo-card">¿Que hacemos?</h5>
+              <p class="texto-card">EcoFood educa, conecta e innova para reducir el desperdicio alimentario mediante talleres, alianzas y tecnología.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card card-personalizado">
+            <div class="card-body">
+              <h5 class="titulo-card">¿Por que lo hacemos?</h5>
+              <p class="texto-card">Lo hacemos con el fin de reducir el desperdicio de alimentos con herramientas educativas y tecnológicas.
+                  Con todo esto poder tener un mundo con menos desperdicio y mayor seguridad alimentaria.</p>
+          </div>
+        </div>
+      </div>
+  </div>
 </body>
 </html>
