--- a/login.html
+++ b/login.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -18,7 +7,7 @@
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-    <div class="signup-container">
+    <div class="kemestascontainer">
         <h2>Iniciar Sesión</h2>
         <form action="indexUsuario.html" method="post">
             <input type="email" placeholder="Correo Electrónico" required><br>
